--- a/researchDetail.html
+++ b/researchDetail.html
@@ -26,7 +26,7 @@
             <div class="h-center flex">
                 <h2>Multidimentional nanospectroscopy laboratory </h2>
             </div>
-            <div class="h-right">
+            <div class="h-right flex">
                 <img src="img/group.png" alt="">
                 <div class="btn_box">
                     <img src="img/earth_icon.png" alt="">
@@ -51,68 +51,95 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="research_detail wrap_box pt90">
-        <div class="breadcrumb">
-            <span>Research Focuses</span>
-            <span>></span>
-            <span>Article</span>
-        </div>
-        <div class="title_box">
-            <h3>LIPID NANODISCS VERSUS VESICLES:A STUDY OF INTERFACIAL H-BOND STRUCTURE AND DYNAMICS</h3>
-            <div>
-                <span>BIO-OPTICAL LABORATORY</span>
-                <span>Oct 16, 2023 16:08</span>
+    <div class="main wrap_box">
+        <div class="research_detail">
+            <div class="breadcrumb">
+                <span>Research Focuses</span>
+                <img src="img/right_jiantou.png" alt="">
+                <span>Article</span>
             </div>
-        </div>
-        <div class="content_box">
-            <dl>
-                <dt>
-                    <h6>INTRODUCTION</h6>
-                </dt>
-                <dd>
-                    <p>Phospho-lipid bilayer nanodiscs are discoidal lipid bilayers of 8-16 nm in diameter</p>
-                    <p>Lipid bilayer nanodiscs have gathered much scientific interest as a stable and tunable membrane mimetic for the study of membranes and membrane proteins</p>
-                    <p>The solvation dynamics in nanodiscs remain underexplored</p>
-                    <img src="images/research/img1.1.png" alt="">
-                </dd>
-            </dl>
-            <dl>
-                <dt>
-                    <h6>RESEARCH GOAL</h6>
-                </dt>
-                <dd>
-                    <p>To determine whether lipid nanodiscs are ideal for structural studies of membrane proteins, we need a full understanding On its hydration environment. Here, we compare various lipid nanodiscs to lipid vesicles by studying the structure and dynamics H-bond network at the lipid interfaces. Our combined experimental methods elucidate the influence of lipid head groups and membrane scaffold proteins on the hydration of lipids nanodiscs.</p>
-                </dd>
-            </dl>
-            <dl>
-                <dt>
-                    <h6>METHODS</h6>
-                </dt>
-                <dd>
-                    <p>In ultrafast two-dimensional infrared spectroscopy (2D IR), a pair of laser pulses excites specific vibrational modes in the sample. Then, following a short waiting time, a third laser pulse measures the response of the sample. This results in pump-probe spectrum like the one on the top.</p>
-                    <img src="images/research/img1.2.png" alt="">
-                    <p>The elongation along the diagonal represents the correlation between the pump and probe frequency. Over time, the correlation is lost due to structural rearrangements of the water. The decorrelation of pump and probe frequencies s measured by center-line-slope analysis.</p>
-                </dd>
-            </dl>
-            <dl>
-                <dt>
-                    <h6>FIGURES AND RESULTS</h6>
-                </dt>
-                <dd>
-                    <p>IR peak frequencies indicates similar lipid-water interface in nanodiscs as vesicles</p>
-                    <p><span>Figure A.</span> Higher heterogeneity in nanodiscs, shown by larger error bars</p>
-                    <p><span>Eigure B.</span> H-bondlenthalpy of nanodiscs varies dependingon the lipid headgroups</p>
-                    <img src="images/research/img1.3.png" alt="">
-                </dd>
-            </dl>
-            <dl>
-                <dt>
-                    <h6>CONCLUSION</h6>
-                </dt>
-                <dd>
-                    <p>This work has been supported by the Welch Foundation (F-1891) and the National Science Foundation (CHE-1847199).The work presented here is a collaboration between the research group of Dr. Eddy and Dr. Baiz</p>
-                </dd>
-            </dl>
+            <div class="title_box">
+                <h3 class="title">LIPID NANODISCS VERSUS VESICLES:A STUDY OF INTERFACIAL H-BOND STRUCTURE AND DYNAMICS
+                </h3>
+                <div class="author_date flex">
+                    <span>BIO-OPTICAL LABORATORY</span>
+                    <span>Oct 16, 2023 16:08</span>
+                </div>
+            </div>
+            <div class="content_box">
+                <dl>
+                    <dt>
+                        <h6>INTRODUCTION</h6>
+                    </dt>
+                    <dd class="list">
+                        <p>Phospho-lipid bilayer nanodiscs are discoidal lipid bilayers of 8-16 nm in diameter</p>
+                        <p>Lipid bilayer nanodiscs have gathered much scientific interest as a stable and tunable
+                            membrane mimetic for the study of membranes and membrane proteins</p>
+                        <p>The solvation dynamics in nanodiscs remain underexplored</p>
+                        <img src="images/research/img1.1.png" alt="">
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <h6>RESEARCH GOAL</h6>
+                    </dt>
+                    <dd>
+                        <p>To determine whether lipid nanodiscs are ideal for structural studies of membrane proteins,
+                            we need a full understanding On its hydration environment. Here, we compare various lipid
+                            nanodiscs to lipid vesicles by studying the structure and dynamics H-bond network at the
+                            lipid interfaces. Our combined experimental methods elucidate the influence of lipid head
+                            groups and membrane scaffold proteins on the hydration of lipids nanodiscs.</p>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <h6>METHODS</h6>
+                    </dt>
+                    <dd>
+                        <p>In ultrafast two-dimensional infrared spectroscopy (2D IR), a pair of laser pulses excites
+                            specific vibrational modes in the sample. Then, following a short waiting time, a third
+                            laser pulse measures the response of the sample. This results in pump-probe spectrum like
+                            the one on the top.</p>
+                        <img src="images/research/img1.2.png" alt="">
+                        <p>The elongation along the diagonal represents the correlation between the pump and probe
+                            frequency. Over time, the correlation is lost due to structural rearrangements of the water.
+                            The decorrelation of pump and probe frequencies s measured by center-line-slope analysis.
+                        </p>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <h6>FIGURES AND RESULTS</h6>
+                    </dt>
+                    <dd>
+                        <p>IR peak frequencies indicates similar lipid-water interface in nanodiscs as vesicles</p>
+                        <p><span>Figure A.</span> Higher heterogeneity in nanodiscs, shown by larger error bars</p>
+                        <p><span>Eigure B.</span> H-bondlenthalpy of nanodiscs varies dependingon the lipid headgroups
+                        </p>
+                        <img src="images/research/img1.3.png" alt="">
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <h6>CONCLUSION</h6>
+                    </dt>
+                    <dd class="list">
+                        <p>Lipid nanodiscs and vesicles compose a similar interfacial H-bond population and dynamics</p>
+                        <p>Headgroup dependence: H-bond dynamics is not largely affected by the head group, shown by CLS decay time obtained from 2D IR, but the thermodynamics show variations in nanodiscs</p>
+                        <p>Nanodiscs size dependence: despite that nanodiscs show overall similar H-bond dynamics as lipid vesicles, the H-bond dynamics have a size dependence due to the unique properties of rim linids.</p>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <h6>ACKNOWLEDGMENTS</h6>
+                    </dt>
+                    <dd>
+                        <p>This work has been supported by the Welch Foundation (F-1891) and the National Science
+                            Foundation (CHE-1847199).The work presented here is a collaboration between the research
+                            group of Dr. Eddy and Dr. Baiz</p>
+                    </dd>
+                </dl>
+            </div>
         </div>
     </div>
 
