--- a/newsDetail.html
+++ b/newsDetail.html
@@ -51,40 +51,42 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="news_detail pt90 wrap_box">
-        <div class="breadcrumb">
-            <span>NEWS</span>
-            <span>></span>
-            <span>Event</span>
-        </div>
-        <div class="title_box">
-            <h3>Lectures on Raman Spectroscopy Technology on Molecular Science Platform</h3>
-            <div>
-                <span>2023-09-19 18:53:27</span>
+    <div class="main wrap_box">
+        <div class="news_detail">
+            <div class="breadcrumb">
+                <span>NEWS</span>
+                <img src="img/right_jiantou.png" alt="">
+                <span>Event</span>
             </div>
-        </div>
-        <div class="content_box">
-            <p>When the steady-state transient fluorescence spectrometer FLS1000 has been running stably for one year,
-                the spectrum laboratory of the public experimental platform for molecular science, in conjunction with
-                Tianmei-Edinburgh Company, held the "Steady-state Transient Spectroscopy Technology Research" in
-                Zhejiang More than 50 teachers and students from more than 10 universities including School of Science
-                and Engineering of West Lake University, Zhejiang University, Zhejiang University of Technology,
-                Institute of Oncology of Chinese Academy of Sciences, Hangzhou Normal University and Ningbo University
-                participated in the seminar and meeting Mainly from the instrument principle, sample preparation and
-                testing skills, we had an in-depth communication with users, and answered the intractable diseases
-                encountered in the testing process. Teachers and students of all colleges and universities actively took
-                advantage of this opportunity to discuss and learn from each other, and achieved good response. </p>
-            <img src="images/news/detail.png" alt="">
-            <p>When the steady-state transient fluorescence spectrometer FLS1000 has been running stably for one year,
-                the spectrum laboratory of the public experimental platform for molecular science, in conjunction with
-                Tianmei-Edinburgh Company, held the "Steady-state Transient Spectroscopy Technology Research" in
-                Zhejiang More than 50 teachers and students from more than 10 universities including School of Science
-                and Engineering of West Lake University, Zhejiang University, Zhejiang University of Technology,
-                Institute of Oncology of Chinese Academy of Sciences, Hangzhou Normal University and Ningbo University
-                participated in the seminar and meeting Mainly from the instrument principle, sample preparation and
-                testing skills, we had an in-depth communication with users, and answered the intractable diseases
-                encountered in the testing process. Teachers and students of all colleges and universities actively took
-                advantage of this opportunity to discuss and learn from each other, and achieved good response. </p>
+            <div class="title_box">
+                <h3 class="title">Lectures on Raman Spectroscopy Technology on Molecular Science Platform</h3>
+                <div class="date">
+                    <span>2023-09-19 18:53:27</span>
+                </div>
+            </div>
+            <div class="content_box">
+                <p>When the steady-state transient fluorescence spectrometer FLS1000 has been running stably for one year,
+                    the spectrum laboratory of the public experimental platform for molecular science, in conjunction with
+                    Tianmei-Edinburgh Company, held the "Steady-state Transient Spectroscopy Technology Research" in
+                    Zhejiang More than 50 teachers and students from more than 10 universities including School of Science
+                    and Engineering of West Lake University, Zhejiang University, Zhejiang University of Technology,
+                    Institute of Oncology of Chinese Academy of Sciences, Hangzhou Normal University and Ningbo University
+                    participated in the seminar and meeting Mainly from the instrument principle, sample preparation and
+                    testing skills, we had an in-depth communication with users, and answered the intractable diseases
+                    encountered in the testing process. Teachers and students of all colleges and universities actively took
+                    advantage of this opportunity to discuss and learn from each other, and achieved good response. </p>
+                <img src="images/news/detail.png" alt="">
+                <p>When the steady-state transient fluorescence spectrometer FLS1000 has been running stably for one year,
+                    the spectrum laboratory of the public experimental platform for molecular science, in conjunction with
+                    Tianmei-Edinburgh Company, held the "Steady-state Transient Spectroscopy Technology Research" in
+                    Zhejiang More than 50 teachers and students from more than 10 universities including School of Science
+                    and Engineering of West Lake University, Zhejiang University, Zhejiang University of Technology,
+                    Institute of Oncology of Chinese Academy of Sciences, Hangzhou Normal University and Ningbo University
+                    participated in the seminar and meeting Mainly from the instrument principle, sample preparation and
+                    testing skills, we had an in-depth communication with users, and answered the intractable diseases
+                    encountered in the testing process. Teachers and students of all colleges and universities actively took
+                    advantage of this opportunity to discuss and learn from each other, and achieved good response. </p>
+            </div>
         </div>
     </div>
 
