--- a/people.html
+++ b/people.html
@@ -51,23 +51,23 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="people main pt90">
-        <div class="wrap_box">
-            <div class="personal_info">
-                <p>Xiao YOU, Ph.D.</p>
-                <p>School of Engineering</p>
-                <p>Center for Synthetic Biology</p>
-                <p>Multi-dimensional Nanospectroscopy laboratory</p>
+    <div class="people main">
+        <div class="personal_info">
+            <div class="wrap_box pt90">
+                <p class="name">Xiao YOU, Ph.D.</p>
+                <p class="school">School of Engineering</p>
+                <p class="center">Center for Synthetic Biology</p>
+                <p class="laboratory">Multi-dimensional Nanospectroscopy laboratory</p>
                 <div class="contact">
                     <p>CONTACT</p>
-                    <p>Email: youxiao@westlake.edu.cn</p>
+                    <p class="email">Email: youxiao@westlake.edu.cn</p>
                 </div>
                 <img src="images/people/yx.png" alt="">
-                <div>“Resonance, the utmost elegance. Like light, people too find beauty in resonance. Gathered at
+                <div class="resonance">“Resonance, the utmost elegance. Like light, people too find beauty in resonance. Gathered at
                     Westlake University,just as light resonates, we, the people, converge. Like the resonance of light,
                     hearts resonate among us.”</div>
-                <div>
-                    <div>Biography</div>
+                <div class="biography">
+                    <h6>Biography</h6>
                     <p>Xiao You, with a Bachelor's degree in Macromolecular Science and Engineering from Fudan
                         University in 2014, achieved a Ph.D. in Materials Science from the University of North Carolina
                         at Chapel Hill in 2019. Following her doctoral studies, she pursued postdoctoral research at the
@@ -78,51 +78,54 @@
                         structural heterogeneity in functional materials, and the ultrafast dynamics in liquid systems.
                     </p>
                 </div>
-                <div>
-                    <div>Hobbies</div>
+                <div class="hobbies">
+                    <h6>Hobbies</h6>
                     <p>Besides scientific research, You Xiao like to play badminton, rock climbing, hiking and other
                         outdoor sports</p>
                 </div>
             </div>
-            <div class="current_member">
-                <div>Current Members</div>
+        </div>
+
+        <div class="current_member">
+            <div class="wrap_box pt90">
+                <div class="title">Current Members</div>
                 <ul>
-                    <li>
-                        <div>
+                    <li class="item flex">
+                        <div class="item_l">
                             <img src="images/people/zyx.png" alt="">
                         </div>
-                        <div>
-                            <div>
-                                <div>
-                                    <p>YunXiu Zhao</p>
-                                    <p>Postdoctoral Fellow</p>
-                                    <p>zhaoyunxiu@westlake.edu.cn</p>
+                        <div class="item_r">
+                            <div class="flex">
+                                <div class="personal_info">
+                                    <p class="name">YunXiu Zhao</p>
+                                    <p class="position">Postdoctoral Fellow</p>
+                                    <p class="email">zhaoyunxiu@westlake.edu.cn</p>
                                 </div>
-                                <ul>
-                                    <li>Ph.D. Chungbuk National University, 2023</li>
-                                    <li>M.S. China Three Gorges University, 2018</li>
-                                    <li>B.S. Northwest Normal University, 2010</li>
+                                <ul class="resumeList">
+                                    <li><span>Ph.D. Chungbuk National University, 2023</span></li>
+                                    <li><span>M.S. China Three Gorges University, 2018</span></li>
+                                    <li><span>B.S. Northwest Normal University, 2010</span></li>
                                 </ul>
                             </div>
                             <div>My main project is currently working on chiral biomolecular induced spin selective, I
                                 love watching movies, and reading books.</div>
                         </div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="item flex">
+                        <div class="item_l">
                             <img src="images/people/mh.png" alt="">
                         </div>
-                        <div>
-                            <div>
-                                <div>
-                                    <p>Muhammad Haroon</p>
-                                    <p>Postdoctoral Fellow</p>
-                                    <p>haroon@westlake.edu.cn</p>
+                        <div class="item_r">
+                            <div class="flex">
+                                <div class="personal_info">
+                                    <p class="name">Muhammad Haroon</p>
+                                    <p class="position">Postdoctoral Fellow</p>
+                                    <p class="email">haroon@westlake.edu.cn</p>
                                 </div>
-                                <ul>
-                                    <li>Ph.D. King Fahd University Petroleum & Minerals, Saudi Arabia</li>
-                                    <li>M.Phil. Minhaj University Lahore, Pakistan</li>
-                                    <li>M.Sc. Minhaj University Lahore, Pakistan</li>
+                                <ul class="resumeList">
+                                    <li><span>Ph.D. King Fahd University Petroleum & Minerals, Saudi Arabia</span></li>
+                                    <li><span>M.Phil. Minhaj University Lahore, Pakistan</span></li>
+                                    <li><span>M.Sc. Minhaj University Lahore, Pakistan</span></li>
                                 </ul>
                             </div>
                             <div>My research Interests are Plasmonic nanomaterials, Drug interaction with nanomaterials,
@@ -131,20 +134,20 @@
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="item flex">
+                        <div class="item_l">
                             <img src="images/people/ms.png" alt="">
                         </div>
-                        <div>
-                            <div>
-                                <div>
-                                    <p>Muhammad Sohail</p>
-                                    <p>Postdoctoral Fellow</p>
-                                    <p>sohail@westlake.edu.cn</p>
+                        <div class="item_r">
+                            <div class="flex">
+                                <div class="personal_info">
+                                    <p class="name">Muhammad Sohail</p>
+                                    <p class="position">Postdoctoral Fellow</p>
+                                    <p class="email">sohail@westlake.edu.cn</p>
                                 </div>
-                                <ul>
-                                    <li>Ph.D. Forman Christian College (A Chartered University) Lahore, Pakistan</li>
-                                    <li>M.Phil. Forman Christian College (A Chartered University) Lahore, Pakistan</li>
+                                <ul class="resumeList">
+                                    <li><span>Ph.D. Forman Christian College (A Chartered University) Lahore, Pakistan</span></li>
+                                    <li><span>M.Phil. Forman Christian College (A Chartered University) Lahore, Pakistan</span></li>
                                 </ul>
                             </div>
                             <div>My research Interests are Micellar solutions, Electrolytes, Drug delivery systems,
@@ -152,20 +155,20 @@
                                 Cricket, Driving.</div>
                         </div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="item flex">
+                        <div class="item_l">
                             <img src="images/people/gzm.png" alt="">
                         </div>
-                        <div>
-                            <div>
-                                <div>
-                                    <p>ZiMing Gao</p>
-                                    <p>Research Assistant</p>
-                                    <p>gaoziming@westlake.edu.cn</p>
+                        <div class="item_r">
+                            <div class="flex">
+                                <div class="personal_info">
+                                    <p class="name">ZiMing Gao</p>
+                                    <p class="position">Research Assistant</p>
+                                    <p class="email">gaoziming@westlake.edu.cn</p>
                                 </div>
-                                <ul>
-                                    <li>M.S.B. Yunnan University, 2023</li>
-                                    <li>B.Sc. Tianjin Normal University, 2020</li>
+                                <ul class="resumeList">
+                                    <li><span>M.S.B. Yunnan University, 2023</span></li>
+                                    <li><span>B.Sc. Tianjin Normal University, 2020</span></li>
                                 </ul>
                             </div>
                             <div>After graduation, I was engaged in the research of the theoretical chemical calculation
@@ -173,19 +176,19 @@
                                 are swimming, hiking and writing. </div>
                         </div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="item flex">
+                        <div class="item_l">
                             <img src="images/people/zhk.png" alt="">
                         </div>
-                        <div>
-                            <div>
-                                <div>
-                                    <p>HuiKe Zhang</p>
-                                    <p>Postdoctoral Fellow</p>
-                                    <p>zhanghuike@westlake.edu.cn</p>
+                        <div class="item_r">
+                            <div class="flex">
+                                <div class="personal_info">
+                                    <p class="name">HuiKe Zhang</p>
+                                    <p class="position">Postdoctoral Fellow</p>
+                                    <p class="email">zhanghuike@westlake.edu.cn</p>
                                 </div>
-                                <ul>
-                                    <li>B.E. Yancheng Institute of Technology, Now</li>
+                                <ul class="resumeList">
+                                    <li><span>B.E. Yancheng Institute of Technology, Now</span></li>
                                 </ul>
                             </div>
                             <div>My research direction is the development of organic functional (optoelectronic)
@@ -193,19 +196,19 @@
                                 life</div>
                         </div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="item flex">
+                        <div class="item_l">
                             <img src="images/people/hd.png" alt="">
                         </div>
-                        <div>
-                            <div>
-                                <div>
-                                    <p>Dan Huang</p>
-                                    <p>Administrative Assistant</p>
-                                    <p>huangdan@westlake.edu.cn</p>
+                        <div class="item_r">
+                            <div class="flex">
+                                <div class="personal_info">
+                                    <p class="name">Dan Huang</p>
+                                    <p class="position">Administrative Assistant</p>
+                                    <p class="email">huangdan@westlake.edu.cn</p>
                                 </div>
-                                <ul>
-                                    <li>B.S. Zhengzhou Shengda University, 2016</li>
+                                <ul class="resumeList">
+                                    <li><span>B.S. Zhengzhou Shengda University, 2016a</span></li>
                                 </ul>
                             </div>
                             <div>Admire the scientists in our laboratory very much! Enjoy this administrative work!
