样式类名修改
pt90 -》pd90

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="main">
-        <div class="welcome pt90">
+        <div class="welcome pd90">
             <div class="wrap_box">
                 <h3 class="title">Welcome to the You Group at Westlake University!</h3>
                 <div class="content_box flex">
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <div class="research pt90">
+        <div class="research pd90">
             <div class="wrap_box">
                 <div class="research_l">
                     <h3 class="title">Research Focuses</h3>
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </div>
-        <div class="contact_us pt90">
+        <div class="contact_us pd90">
             <div class="wrap_box">
                 <h3 class="title">Join Us on Our Scientific Journey:</h3>
                 <p>Our research group is driven by a passion for discovery and a commitment to pushing the boundaries of
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-        <div class="newsList pt90">
+        <div class="newsList pd90">
             <div class="wrap_box">
                 <h3 class="title">The news we publish will show you</h3>
                 <div class="instr flex">
