--- a/newsList.html
+++ b/newsList.html
@@ -51,7 +51,7 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="newsList pt90 main">
+    <div class="newsList pd90 main">
         <div class="wrap_box">
             <ul>
                 <li class="flex">
