--- a/people.html
+++ b/people.html
@@ -53,7 +53,7 @@
 
     <div class="people main">
         <div class="personal_info">
-            <div class="wrap_box pt90">
+            <div class="wrap_box pd90">
                 <p class="name">Xiao YOU, Ph.D.</p>
                 <p class="school">School of Engineering</p>
                 <p class="center">Center for Synthetic Biology</p>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="current_member">
-            <div class="wrap_box pt90">
+            <div class="wrap_box pd90">
                 <div class="title">Current Members</div>
                 <ul>
                     <li class="item flex">
