--- a/openings.html
+++ b/openings.html
@@ -51,23 +51,25 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="openings pd90 wrap_box">
-        <h3>Join Us</h3>
+    <div class="openings main pd90 wrap_box">
+        <h3 class="title">Join Us</h3>
         <div class="join_us">
             <div class="join_us_l">
                 <div class="contact_box">
                     <h6>CONTACT</h6>
-                    <div>Email: youlab@westlake.edu.cn</div>
+                    <p class="email">Email: youlab@westlake.edu.cn</p>
                 </div>
-                <p>Email: youlab@westlake.edu.cn</p>
+                <p>We are looking for self-motivated research assistant professors, post-docs, graduate students and
+                    interns who are interested in Al for life sciences. If you are interested in joining our group,
+                    please contact us with your complete curriculum vitae</p>
             </div>
             <div class="join_us_r">
                 <img src="images/openings/img1.png" alt="">
             </div>
         </div>
-        <h3>Enrollment Plan</h3>
-        <div>
-            <div>
+        <h3 class="title">Enrollment Plan</h3>
+        <div class="fellow">
+            <div class="top">
                 <img src="images/openings/dr_icon.png" alt="">
                 <h6>Postdoctoral Fellow</h6>
             </div>
@@ -84,8 +86,8 @@
                         preferred.</a></dd>
             </dl>
         </div>
-        <div>
-            <div>
+        <div class="assistant">
+            <div class="top">
                 <img src="images/openings/assistant_icon.png" alt="">
                 <h6>Research Assistant</h6>
             </div>
