--- a/publications.html
+++ b/publications.html
@@ -52,8 +52,8 @@
     </div>
 
     <div class="main">
-        <div class="publications pd90 clearfix">
-            <div class="wrap_box">
+        <div class="publications">
+            <div class="wrap_box pd90 clearfix">
                 <ul class="publications_nav">
                     <li><a href="">2023</a></li>
                     <li><a href="">2022</a></li>
