--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="wrap_box flex">
-            <div class="h-left">
+            <div class="h-left flex">
                 <a class="university flex" href="https://github.com/hugeRecycle/YouLab">
                     <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
                 </a>
@@ -51,80 +51,82 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="teaching pd90 wrap_box">
-        <nav>
-            <div>Teaching</div>
-            <dl>
-                <dt>Classification</dt>
-                <dd>Title</dd>
-                <dd>Title</dd>
-                <dd>Title</dd>
-                <dd>Title</dd>
-                <dd>Title</dd>
-                <dd>Title</dd>
-                <dd>Title</dd>
-            </dl>
-            <dl>
-                <dt>Classification</dt>
-                <dd>Title</dd>
-                <dd>Title</dd>
-                <dd>Title</dd>
-                <dd>Title</dd>
-            </dl>
-            <dl>
-                <dt>Classification</dt>
-                <dd>Title</dd>
-                <dd>Title</dd>
-            </dl>
-        </nav>
-        <div class="content_box">
-            <h3>Using Ultrafast Infrared Spectroscopy to Study Free Volume in Polymer Materials</h3>
-            <p>Polymers are versatile materials with many industrial applications such as gas separation membranes and
-                dielectric media. They are tolerant to a range of working conditions, and combined with organic
-                synthetic chemistry, their chemical structures are tunable to offer a virtually infinite library of
-                material properties. Free volume is a key component of polymer membranes. Its characteristics are
-                related to, and in some cases dictate, the membrane’s macroscopic properties, such as thermal response,
-                viscosity, gas permeability and dielectric response.</p>
-            <div>
-                <img src="images/teaching/img1.png" alt="">
-                <div><span>Figure 1.</span> Schematic representation of polymer membrane showing FVEs and vibrational
-                    probe, PhSeCN, trapped inside them.</div>
+    <div class="teaching main">
+        <div class="wrap_box pd90 clearfix">
+            <nav>
+                <h6>Teaching</h6>
+                <dl>
+                    <dt>Classification</dt>
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                </dl>
+                <dl>
+                    <dt>Classification</dt>
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                </dl>
+                <dl>
+                    <dt>Classification</dt>
+                    <dd><a href="">Title</a></dd> 
+                    <dd><a href="">Title</a></dd> 
+                </dl>
+            </nav>
+            <div class="content_box">
+                <h3 class="title">Using Ultrafast Infrared Spectroscopy to Study Free Volume in Polymer Materials</h3>
+                <p>Polymers are versatile materials with many industrial applications such as gas separation membranes and
+                    dielectric media. They are tolerant to a range of working conditions, and combined with organic
+                    synthetic chemistry, their chemical structures are tunable to offer a virtually infinite library of
+                    material properties. Free volume is a key component of polymer membranes. Its characteristics are
+                    related to, and in some cases dictate, the membrane’s macroscopic properties, such as thermal response,
+                    viscosity, gas permeability and dielectric response.</p>
+                <div>
+                    <img src="images/teaching/img1.png" alt="">
+                    <div><span>Figure 1.</span> Schematic representation of polymer membrane showing FVEs and vibrational
+                        probe, PhSeCN, trapped inside them.</div>
+                </div>
+                <p>Glass forming polymers above their glass transition temperature, Tg, exist in thermal equilibrium, as
+                    they possess enough thermal energy to achieve the most efficient chain packing. As the system crosses
+                    below Tg, its viscosity increases rapidly, chain mobility is diminished, and polymer chains become
+                    locked in an inefficiently packed, high-energy, non-equilibrium configuration. This leaves scattered
+                    across the matrix a series of “pockets” of unoccupied space called free volume elements (FVEs), which
+                    span a range of sizes and structures (Fig. 1).</p>
+                <p>Using poly(methyl methacrylate), PMMA, and polystyrene, PS, we developed an experimental approach called
+                    Restricted Orientation Anisotropy Method (ROAM) to measure the size, size distribution, structural
+                    dynamics timescales, and size-dependent intrinsic electric fields of polymer FVEs. ROAM uses a
+                    polarization-selective pump-probe experiment to measure the orientational dynamics of a small
+                    vibrational probe embedded inside FVEs. The vibrational probe is used as a molecular ruler for FVE
+                    sizes, and its vibrational frequency is used to extract polymer E-fields.</p>
+                <div>
+                    <img src="images/teaching/img1.png" alt="">
+                    <div><span>Figure 2.</span> Population decay (i.e., first excited state lifetime) of PhSeCN in
+                        poly(methyl methacrylate) and polystyrene. </div>
+                </div>
+                <p>In time-resolved vibrational spectroscopy, the experimental time-window is determined by the excited
+                    state lifetime of the observed vibrational mode. Because polymers are slow-moving chemical systems,
+                    their molecular dynamics are slow, and a long first excited state lifetime is required. The symmetric CN
+                    stretch of phenyl selenocyanate, PhSeCN, has a vibrational lifetime of >400 ps at room temperature,
+                    which allows an observation window of over 1 ns (Fig. 2). This property results from the presence of the
+                    selenium atom between the CN moiety and the phenyl ring. The heavy atom isolates the CN stretch and
+                    inhibits intramolecular vibrational relaxation pathways, thus increasing the CN’s vibrational lifetime.
+                </p>
+                <p>The orientational dynamics of PhSeCN inside FVEs are characterized by frequency dependent biexponential
+                    decays with non-zero final offsets (Fig. 3 A – B). Because the frequency of a particular probe molecule
+                    is partly determined by the surrounding local electrostatics (see below), different frequencies
+                    correspond to subensembles of probe in distinct chemical environments (FVEs). The non-zero decay offsets
+                    indicate that the probe’s reorientation is restricted such that it cannot fully randomize its
+                    orientation, and the frequency dependence shows that different probe subensembles have distinct
+                    orientational dynamics. Because orientational restriction results from a collision between the probe and
+                    the inner walls of the surrounding polymer cage, the extent of decay at each frequency quantifies the
+                    level of restriction of the probe. Thus, the PSPP experiment unambiguously shows that different
+                    subensembles of probe molecules are trapped in FVEs of different sizes.</p>
             </div>
-            <p>Glass forming polymers above their glass transition temperature, Tg, exist in thermal equilibrium, as
-                they possess enough thermal energy to achieve the most efficient chain packing. As the system crosses
-                below Tg, its viscosity increases rapidly, chain mobility is diminished, and polymer chains become
-                locked in an inefficiently packed, high-energy, non-equilibrium configuration. This leaves scattered
-                across the matrix a series of “pockets” of unoccupied space called free volume elements (FVEs), which
-                span a range of sizes and structures (Fig. 1).</p>
-            <p>Using poly(methyl methacrylate), PMMA, and polystyrene, PS, we developed an experimental approach called
-                Restricted Orientation Anisotropy Method (ROAM) to measure the size, size distribution, structural
-                dynamics timescales, and size-dependent intrinsic electric fields of polymer FVEs. ROAM uses a
-                polarization-selective pump-probe experiment to measure the orientational dynamics of a small
-                vibrational probe embedded inside FVEs. The vibrational probe is used as a molecular ruler for FVE
-                sizes, and its vibrational frequency is used to extract polymer E-fields.</p>
-            <div>
-                <img src="images/teaching/img1.png" alt="">
-                <div><span>Figure 2.</span> Population decay (i.e., first excited state lifetime) of PhSeCN in
-                    poly(methyl methacrylate) and polystyrene. </div>
-            </div>
-            <p>In time-resolved vibrational spectroscopy, the experimental time-window is determined by the excited
-                state lifetime of the observed vibrational mode. Because polymers are slow-moving chemical systems,
-                their molecular dynamics are slow, and a long first excited state lifetime is required. The symmetric CN
-                stretch of phenyl selenocyanate, PhSeCN, has a vibrational lifetime of >400 ps at room temperature,
-                which allows an observation window of over 1 ns (Fig. 2). This property results from the presence of the
-                selenium atom between the CN moiety and the phenyl ring. The heavy atom isolates the CN stretch and
-                inhibits intramolecular vibrational relaxation pathways, thus increasing the CN’s vibrational lifetime.
-            </p>
-            <p>The orientational dynamics of PhSeCN inside FVEs are characterized by frequency dependent biexponential
-                decays with non-zero final offsets (Fig. 3 A – B). Because the frequency of a particular probe molecule
-                is partly determined by the surrounding local electrostatics (see below), different frequencies
-                correspond to subensembles of probe in distinct chemical environments (FVEs). The non-zero decay offsets
-                indicate that the probe’s reorientation is restricted such that it cannot fully randomize its
-                orientation, and the frequency dependence shows that different probe subensembles have distinct
-                orientational dynamics. Because orientational restriction results from a collision between the probe and
-                the inner walls of the surrounding polymer cage, the extent of decay at each frequency quantifies the
-                level of restriction of the probe. Thus, the PSPP experiment unambiguously shows that different
-                subensembles of probe molecules are trapped in FVEs of different sizes.</p>
         </div>
     </div>
 
