--- a/energyConverter.html
+++ b/energyConverter.html
@@ -37,13 +37,17 @@
     </header>
     <menu>
         <ul class="menu wrap_box flex">
-            <li class="active left"><a href="index.html">HOME</a></li>
-            <li><a href="publications.html">PUBLICATIONS</a></li>
-            <li class="right"><a href="researchList.html">RESEARCH</a></li>
+            <li class="flex">
+                <a class="active" href="index.html">HOME</a>
+                <a href="publications.html">PUBLICATIONS</a>
+                <a href="researchList.html">RESEARCH</a>
+            </li>
             <li><img src="./img/label.png" alt=""></li>
-            <li class="left"><a href="people.html">PEOPLE</a></li>
-            <li><a href="newsList.html">News</a></li>
-            <li class="right"><a href="openings.html">RESOURCES</a></li>
+            <li class="flex">
+                <a href="people.html">PEOPLE</a>
+                <a href="newsList.html">News</a>
+                <a href="openings.html">RESOURCES</a>
+            </li>
         </ul>
     </menu>
     <div class="banner">
@@ -109,11 +113,11 @@
                 <div class="content_bottom flex">
                     <div>
                         <label>Raman Frequency (GHz)</label>
-                        <input disabled/>
+                        <input disabled />
                     </div>
                     <div>
                         <label>Raman Energy (meV)</label>
-                        <input disabled/>
+                        <input disabled />
                     </div>
                     <div></div>
                 </div>
