--- a/publications.html
+++ b/publications.html
@@ -37,13 +37,17 @@
     </header>
     <menu>
         <ul class="menu wrap_box flex">
-            <li class="active left"><a href="index.html">HOME</a></li>
-            <li><a href="publications.html">PUBLICATIONS</a></li>
-            <li class="right"><a href="researchList.html">RESEARCH</a></li>
+            <li class="flex">
+                <a class="active" href="index.html">HOME</a>
+                <a href="publications.html">PUBLICATIONS</a>
+                <a href="researchList.html">RESEARCH</a>
+            </li>
             <li><img src="./img/label.png" alt=""></li>
-            <li class="left"><a href="people.html">PEOPLE</a></li>
-            <li><a href="newsList.html">News</a></li>
-            <li class="right"><a href="openings.html">RESOURCES</a></li>
+            <li class="flex">
+                <a href="people.html">PEOPLE</a>
+                <a href="newsList.html">News</a>
+                <a href="openings.html">RESOURCES</a>
+            </li>
         </ul>
     </menu>
     <div class="banner">
