首页样式调整

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                 <div class="content_box flex">
                     <div class="content_l">
                         <div class="img_box">
-                            <img src="images/home/img1.png" alt="">
-                            <img src="images/home/bar.png" alt="">
+                            <img class="image" src="images/home/img1.png" alt="">
                         </div>
                         <div class="cont">
                             <img class="line" src="images/home/line.png" alt="">
@@ -79,7 +78,7 @@
                         <p>Resonance, the epitome of elegance. Just as light resonates, so do our hearts converge at
                             Westlake University, where We find beauty in the resonance among people.</p>
                         <img class="quotation_mark_r" src="images/home/quotation_mark_r.png" alt="">
-                        <img src="images/home/img2.png" alt="">
+                        <img class="image" src="images/home/img2.png" alt="">
                     </div>
                 </div>
             </div>
